# rust-package

./: .env.example  .gitignore  Cargo.toml
example/: .env.example  Cargo.toml
example/commands/: test.rs
example/src/: main.rs
src/: lib.rs  main.rs
src/commands/: test.rs
src/discordanalytics/: data.rs  discordanalytics.rs  interaction_handler.rs  mod.rs
