[package]
name = "discordanalytics"
version = "0.1.0"
edition = "2021"
authors = ["ValDesign <valdesign.dev@gmail.com>"]
description = "A rust crate for interacting with Discord Analytics API"
homepage = "https://github.com/DiscordAnalytics/rust-package"
repository = "https://github.com/DiscordAnalytics/rust-package.git"
documentation = "https://docs.discordanalytics.xyz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "cache"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
chrono = "0.4.37"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
