[package]
name = "discord-analytics-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector", "cache"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
discordanalytics = { version = "0.1.0", path = "../" }
